2011-01-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* MANIFEST, COPYING: Updated.

2011-01-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_builtin_openvas_tcp_scanner.c (plugin_init): Remove.
	(plugin_run_openvas_tcp_scanner): Return NULL instead of 0.

2011-01-14  Matthew Mundell <matthew.mundell@greenbone.net>

	Add a NASL builtin command to replace the synscan NES NVT.

	* nasl/CMakeLists.txt: Add builtin openvas_tcp_scanner to FILES.

	* nasl/nasl_builtin_synscan.c: New file.  A copy of
	openvas-scanner/cnvts/synscan/synscan.c, modified
	slightly for NASL caller.

	* nasl/nasl_builtin_plugins.h: Add header.

	* nasl/nasl_init.c (libfuncs): Add plugin_run_synscan.

2011-01-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Add a NASL builtin command to replace the openvas_tcp_scanner NES NVT.

	* nasl/CMakeLists.txt: Add builtin openvas_tcp_scanner to FILES.  Add
	maths lib to link libraries.

	* nasl/nasl_builtin_openvas_tcp_scanner.c: New file.  A copy of
	openvas-scanner/cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c, modified
	slightly for NASL caller.

	* nasl/nasl_builtin_plugins.h: Add header.

	* nasl/nasl_init.c (libfuncs): Add plugin_run_openvas_tcp_scanner.

2011-01-13  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_write_config): Changed defaults
	of certain ldap attribute names to more sensible values.

2011-01-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_run_find_service): Remove
	tracing.

2011-01-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Add a builtin version of the find_service C NVT, to replace the C
	version.  Most of work by Jan-Oliver Wagner.

	* nasl/CMakeLists.txt: Use Greenbone addresses.  Add builtin
	find_service to FILES.

	* nasl/nasl_builtin_find_service.c: New file.  A copy of
	openvas-scanner/cnvts/find_service/find_service.c, modified slightly
	for NASL caller.
